updated css and html

--- a/deskclub.html
+++ b/deskclub.html
@@ -50,11 +50,12 @@
         <div class="header-inner-container text-center">
             <div class="header-content">
                 <p><b>deskclub</b> / website</p>
+                <p><b>clean and modern one-page layout site for commercial / business use</b></p>
                 <ul>
                     <li><a href="https://jonkohjj.github.io/DeskClub/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/DeskClub"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>I built this one-page layout website using pure <code>html</code>, <code>css</code>, and <code>javascript</code>. Design is inspired from a mock up I found on dribble and I tried to replicated it as much as possible. Good practice overall.</p>
+                <p>Site was build using pure HTML, CSS and javascript with responsive layouts taken into consideration right from the start. I used mainly media queries, rem units and took a mobile first approach. No libraries was used e.g. bootstrap to acheive this as I wanted to practice coding with pure CSS. </p>
             </div>
         </div>
     </div>
