updated new project links

--- a/deskclub.html
+++ b/deskclub.html
@@ -52,7 +52,7 @@
                 <p><b>deskclub</b> / website</p>
                 <p><b>clean and modern one-page layout site for commercial / business use</b></p>
                 <ul>
-                    <li><a href="https://jonkohjj.github.io/DeskClub/"><i class="fas fa-globe"></i> Live Site</a></li>
+                    <li><a href="https://jonkohjj.github.io/DeskClub-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/DeskClub"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
                 <p>Site was build using pure HTML, CSS and javascript with responsive layouts taken into consideration right from the start. I used mainly media queries, rem units and took a mobile first approach. No libraries was used e.g. bootstrap to acheive this as I wanted to practice coding with pure CSS. </p>
