--- a/blogr.html
+++ b/blogr.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="./style_index.css">
     <link rel="stylesheet" href="./style_projects.css">
 
+    <style>
+        .header-container::before{
+            background-image: url('./images/blogr/Blogr_thumbnail.png');
+        }
+    </style>
+
 </head>
 <body>
     <!-- NAV-CONTAINER -->
@@ -45,21 +51,17 @@
         </div>
     </div>
 
-    <!-- BACK BUTTON CONTAINER -->
-    <div class="back-container">
-        <a href="./index.html"><i class="fas fa-arrow-left fa-3x"></i> <br>return</a>
-    </div>
-
     <!-- HEADER CONTAINER -->
     <div class="header-container" id="target-header">
         <div class="header-inner-container text-center">
             <div class="header-content">
-                <p><b>project 2</b> / website</p>
+                <p><b>Blogr</b> / website</p>
+                <p><b>a minimalistic landing page for Blogr, a publishing company</b></p>
                 <ul>
-                    <li><a href="#"><i class="fas fa-globe"></i> Live Site</a></li>
-                    <li><a href="#"><i class="fab fa-github"></i> View Code</a></li>
+                    <li><a href="https://jonkohjj.github.io/Blogr-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
+                    <li><a href="https://github.com/JonKohJJ/Blogr-Landing-Page"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>I built this one-page layout website using pure <code>html</code>, <code>css</code>, and <code>javascript</code>. Design is inspired from a mock up I found on dribble and I tried to replicated it as much as possible. Good practice overall.</p>
+                <p>This is a responsive landing page that I built using pure HTML, CSS and Javascript. The design was taken from Frontend Mentor, where the design is given beforehand and the goal is to replicate a website exactly. This was what I came up with.</p>
             </div>
         </div>
     </div>
