--- a/index.html
+++ b/index.html
@@ -78,6 +78,17 @@
                         </div>
                     </a>
                 </div>
+
+                <div class="project-item item-2">
+                    <a href="./blogr.html">
+                        <img class="project-image" src="./images/blogr/Blogr_thumbnail.png" alt="deskclub">
+                        <div class="project-overlay">
+                            <div class="project-title">
+                                <p><b>Blogr Landing Page</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 
             </div>
         </div>
