--- a/deskclub.html
+++ b/deskclub.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="./style_index.css">
     <link rel="stylesheet" href="./style_projects.css">
 
+    <style>
+        .header-container::before{
+            background-image: url('./images/deskclub/deskclub_thumbnail.png');
+        }
+    </style>
+
 </head>
 <body>
     <!-- NAV-CONTAINER -->
@@ -50,7 +56,7 @@
         <div class="header-inner-container text-center">
             <div class="header-content">
                 <p><b>deskclub</b> / website</p>
-                <p><b>clean and modern one-page layout site for commercial / business use</b></p>
+                <p><b>a clean and modern landing page for deskclub, a real estate company</b></p>
                 <ul>
                     <li><a href="https://jonkohjj.github.io/DeskClub-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/DeskClub"><i class="fab fa-github"></i> View Code</a></li>
