added fylo to portfolio

--- a/fylo.html
+++ b/fylo.html
@@ -20,6 +20,13 @@
     <link rel="stylesheet" href="./style_index.css">
     <link rel="stylesheet" href="./style_projects.css">
 
+
+    <style>
+        .header-container::before{
+            background-image: url('./images/fylo/fylo_thumbnail.png');
+        }
+    </style>
+
 </head>
 <body>
     <!-- NAV-CONTAINER -->
@@ -44,20 +51,16 @@
             </div>
         </div>
     </div>
-
-    <!-- BACK BUTTON CONTAINER -->
-    <div class="back-container">
-        <a href="./index.html"><i class="fas fa-arrow-left fa-3x"></i> <br>return</a>
-    </div>
     
     <!-- HEADER CONTAINER -->
     <div class="header-container" id="target-header">
         <div class="header-inner-container text-center">
             <div class="header-content">
-                <p><b>project 3</b> / website</p>
+                <p><b>Fylo</b> / website</p>
+                <p><b>a clean and modern landing page for deskclub, a real estate company</b></p>
                 <ul>
-                    <li><a href="#"><i class="fas fa-globe"></i> Live Site</a></li>
-                    <li><a href="#"><i class="fab fa-github"></i> View Code</a></li>
+                    <li><a href="https://jonkohjj.github.io/Fylo-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
+                    <li><a href="https://github.com/JonKohJJ/Fylo-Landing-Page"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
                 <p>I built this one-page layout website using pure <code>html</code>, <code>css</code>, and <code>javascript</code>. Design is inspired from a mock up I found on dribble and I tried to replicated it as much as possible. Good practice overall.</p>
             </div>
