--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <img class="project-image" src="./images/deskclub/deskclub_thumbnail.png" alt="deskclub">
                         <div class="project-overlay">
                             <div class="project-title">
-                                <p><b>DeskClub Co-working Space</b></p>
+                                <p><b>DeskClub Landing Page</b></p>
                             </div>
                         </div>
                     </a>
@@ -85,6 +85,17 @@
                         <div class="project-overlay">
                             <div class="project-title">
                                 <p><b>Blogr Landing Page</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="project-item item-3">
+                    <a href="./fylo.html">
+                        <img class="project-image" src="./images/fylo/fylo_thumbnail.png" alt="deskclub">
+                        <div class="project-overlay">
+                            <div class="project-title">
+                                <p><b>Fylo Landing Page</b></p>
                             </div>
                         </div>
                     </a>
