--- a/blogr.html
+++ b/blogr.html
@@ -56,12 +56,12 @@
         <div class="header-inner-container text-center">
             <div class="header-content">
                 <p><b>Blogr</b> / website</p>
-                <p><b>a minimalistic landing page for Blogr, a publishing company</b></p>
+                <p><b>Blogr, a publishing company</b></p>
                 <ul>
                     <li><a href="https://jonkohjj.github.io/Blogr-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/Blogr-Landing-Page"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>This is a responsive landing page that I built using pure HTML, CSS and Javascript. The design was taken from Frontend Mentor, where the design is given beforehand and the goal is to replicate a website exactly. This was what I came up with.</p>
+                <p>I built this website using pure <b>HTML</b>, <b>CSS</b> and <b>Javascript</b>. Again, I made this website responsive taking into consideration mobile, table and desktop users. The design was taken from frontendmentor.io and then built from scratch.</p>
             </div>
         </div>
     </div>
