--- a/deskclub.html
+++ b/deskclub.html
@@ -55,13 +55,13 @@
     <div class="header-container" id="target-header">
         <div class="header-inner-container text-center">
             <div class="header-content">
-                <p><b>deskclub</b> / website</p>
-                <p><b>a clean and modern landing page for deskclub, a real estate company</b></p>
+                <p><b>DeskClub</b> / website</p>
+                <p><b>DeskClub, a real estate company</b></p>
                 <ul>
                     <li><a href="https://jonkohjj.github.io/DeskClub-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/DeskClub"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>Site was build using pure HTML, CSS and javascript with responsive layouts taken into consideration right from the start. I used mainly media queries, rem units and took a mobile first approach. No libraries was used e.g. bootstrap to acheive this as I wanted to practice coding with pure CSS. </p>
+                <p>Site was build using pure <b>HTML</b>, <b>CSS</b> and <b>javascript</b> with responsive layouts taken into consideration right from the start. I used mainly media queries, rem units and took a mobile first approach. No libraries was used e.g. bootstrap to acheive this as I wanted to practice coding with pure CSS.</p>
             </div>
         </div>
     </div>
