--- a/fylo.html
+++ b/fylo.html
@@ -57,12 +57,12 @@
         <div class="header-inner-container text-center">
             <div class="header-content">
                 <p><b>Fylo</b> / website</p>
-                <p><b>a clean and modern landing page for deskclub, a real estate company</b></p>
+                <p><b>Flyo, a software security company</b></p>
                 <ul>
                     <li><a href="https://jonkohjj.github.io/Fylo-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/Fylo-Landing-Page"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>I built this one-page layout website using pure <code>html</code>, <code>css</code>, and <code>javascript</code>. Design is inspired from a mock up I found on dribble and I tried to replicated it as much as possible. Good practice overall.</p>
+                <p>I used pure <b>HTML</b> and <b>CSS</b> to create this landing page / website and as always, I implemented responsive layouts to be used on mobile, tablet or desktop view. The design was taken from frontendmentor.io and then built from scratch.</p>
             </div>
         </div>
     </div>
