added room in projects

--- a/room.html
+++ b/room.html
@@ -20,6 +20,12 @@
     <link rel="stylesheet" href="./style_index.css">
     <link rel="stylesheet" href="./style_projects.css">
 
+    <style>
+        .header-container::before{
+            background-image: url('./images/room/room_thumbnail.png');
+        }
+    </style>
+
 </head>
 <body>
     <!-- NAV-CONTAINER -->
@@ -54,12 +60,12 @@
     <div class="header-container" id="target-header">
         <div class="header-inner-container text-center">
             <div class="header-content">
-                <p><b>project 4</b> / website</p>
+                <p><b>Room</b> / website</p>
                 <ul>
-                    <li><a href="#"><i class="fas fa-globe"></i> Live Site</a></li>
-                    <li><a href="#"><i class="fab fa-github"></i> View Code</a></li>
+                    <li><a href="https://jonkohjj.github.io/Room-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
+                    <li><a href="https://github.com/JonKohJJ/Room-Landing-Page"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>I built this one-page layout website using pure <code>html</code>, <code>css</code>, and <code>javascript</code>. Design is inspired from a mock up I found on dribble and I tried to replicated it as much as possible. Good practice overall.</p>
+                <p>I used gsap, a javascript library for this homepage to acheieve the seamless animations when the page loads. This was built using pure HTML, SCSS and javascript specifically for the switching between the carousell iamges and its respective content.</p>
             </div>
         </div>
     </div>
