--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
                         </div>
                     </a>
                 </div>
+
+                <div class="project-item item-4">
+                    <a href="./room.html">
+                        <img class="project-image" src="./images/room/room_thumbnail.png" alt="deskclub">
+                        <div class="project-overlay">
+                            <div class="project-title">
+                                <p><b>Room Homepage</b></p>
+                            </div>
+                        </div>
+                    </a>
+                </div>
                 
             </div>
         </div>
