--- a/index.html
+++ b/index.html
@@ -126,7 +126,8 @@
             <div class="skill-content">
                 <div class="skill-about" id="target-about">
                     <div class="about-img">
-                        <img src="./images/portrait_2_square.jpg" alt="King's Park at Night"></div>
+                        <img src="./images/portrait_2_square.jpg" alt="King's Park at Night">
+                    </div>
                     <div class="about-content">
                         <p>I am a data science and management major from the University of Western Australia, having graduated in mid 2020.</p>
                     
@@ -219,6 +220,9 @@
             </ul>
         </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/ScrollTrigger.min.js"></script>
 
     <script src="/app.js"></script>
 </body>
