--- a/room.html
+++ b/room.html
@@ -60,7 +60,7 @@
                     <li><a href="https://jonkohjj.github.io/Room-Landing-Page/"><i class="fas fa-globe"></i> Live Site</a></li>
                     <li><a href="https://github.com/JonKohJJ/Room-Landing-Page"><i class="fab fa-github"></i> View Code</a></li>
                 </ul>
-                <p>I used gsap, a javascript library for this homepage to acheieve the seamless animations when the page loads. This was built using pure HTML, SCSS and javascript specifically for the switching between the carousell iamges and its respective content.</p>
+                <p>I used <b>gsap</b>, a javascript library for this homepage to acheieve the seamless animations when the page loads. This was built using pure <b>HTML</b>, <b>SCSS</b> and <b>javascript</b> specifically for the switching between the carousell images and its respective content.</p>
             </div>
         </div>
     </div>
