--- a/fylo.html
+++ b/fylo.html
@@ -33,7 +33,9 @@
     <div class="nav-container">
         <div class="nav-inner-container">
             <div class="nav-logo">
-                <p><a href="./index.html"><b>Jonathan Koh</b></a></p>
+                <p><a href="./index.html">
+                    <img src="./images/logo_transparent.png" alt="">
+                </a></p>
             </div>
             <div class="nav-links">
                 <ul>
