--- a/fylo.html
+++ b/fylo.html
@@ -34,7 +34,7 @@
         <div class="nav-inner-container">
             <div class="nav-logo">
                 <p><a href="./index.html">
-                    <img src="./images/logo_transparent.png" alt="">
+                    <img src="./images/logo_transparent_svg.svg" alt="">
                 </a></p>
             </div>
             <div class="nav-links">
