--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="icon" href="./images/logo_transparent.png">
+    <link rel="icon" href="./images/logo_transparent_svg.svg">
 
     <!-- google fonts CDN -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,7 +28,7 @@
         <div class="nav-inner-container">
             <div class="nav-logo">
                 <p><a href="./index.html">
-                    <img src="./images/logo_transparent.png" alt="">
+                    <img src="./images/logo_transparent_svg.svg" alt="">
                 </a></p>
             </div>
             <div class="nav-links">
@@ -146,7 +146,7 @@
                 </div>
                 <div class="skill">
                     <div class="skill-dev">
-                        <p><b>Developement</b></p>
+                        <p><i class="fas fa-file-code"></i> <b>Developement</b></p>
                         <p><i class="fas fa-check"></i> HTML5</p>
                         <p><i class="fas fa-check"></i> CSS3</p>
                         <p><i class="fas fa-check"></i> Javascript</p>
@@ -158,7 +158,7 @@
                         <p><i class="fas fa-exclamation"></i> SASS</p>
                     </div>
                     <div class="skill-frameworks">
-                        <p><b>Frameworks</b></p>
+                        <p><i class="fas fa-layer-group"></i> <b>Frameworks</b></p>
                         <p><i class="fas fa-check"></i> Bootstrap</p>
                         <p><i class="fas fa-check"></i> Flask</p>
                     </div>
@@ -167,7 +167,7 @@
                         <p><i class="fas fa-exclamation"></i> React</p>
                     </div>
                     <div class="skill-tools">
-                        <p><b>Knowledge & Tools</b></p>
+                        <p><i class="fas fa-cogs"></i> <b>Knowledge & Tools</b></p>
                         <p><i class="fas fa-check"></i> Git + GitHub</p>
                         <p><i class="fas fa-check"></i> Responsive Design</p>
                         <p><i class="fas fa-check"></i> GitHub Pages & Netlify</p>
@@ -217,11 +217,12 @@
     <!-- FOOTER CONTAINER -->
     <div class="footer-container">
         <div class="footer-inner-container text-center">
-            <p>&#169 Jonathan Koh. All Rights Reserved</p>
+            
             <ul>
                 <li><a href="https://www.linkedin.com/in/jonathankohjunjuet/"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/JonKohJJ"><i class="fab fa-github"></i></a></li>
             </ul>
+            <p>&#169 Jonathan Koh. All Rights Reserved</p>
         </div>
     </div>
 
