--- a/index.html
+++ b/index.html
@@ -148,14 +148,14 @@
                     <div class="skill-dev">
                         <p><i class="fas fa-file-code"></i> <b>Developement</b></p>
                         <p><i class="fas fa-check"></i> HTML5</p>
-                        <p><i class="fas fa-check"></i> CSS3</p>
+                        <p><i class="fas fa-check"></i> SASS / CSS3</p>
                         <p><i class="fas fa-check"></i> Javascript</p>
                         <p><i class="fas fa-check"></i> Python</p>
                         <p><i class="fas fa-check"></i> SQL</p>
                     </div>
                     <div class="skill-dev-current">
                         <p><b>Currently Learning:</b></p>
-                        <p><i class="fas fa-exclamation"></i> SASS</p>
+                        <p><i class="fas fa-exclamation"></i> TypeScript</p>
                     </div>
                     <div class="skill-frameworks">
                         <p><i class="fas fa-layer-group"></i> <b>Frameworks</b></p>
