--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                                 <li>JS</li>
                             </ul>
                         </div>
-                        <p>An e-commerce homepage built using <a href="https://sass-lang.com/"><u>SASS</u></a>, a pre-processor. <a href="https://greensock.com/gsap/"><u>GSAP</u></a>, a JavaScript library was use to achieve seemless animations. Users are able to navigate the slider using either their mouse/trackpad or keyboard.</p>
+                        <p>An e-commerce homepage built using <a href="https://sass-lang.com/"><u>SASS</u></a>, a pre-processor. <a href="https://greensock.com/gsap/"><u>GSAP</u></a>, a JavaScript library was use to achieve seemless animations. Users are able to navigate the slider using their mouse/trackpad.</p>
                     </div>
                 </div>
 
