--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                 <li><a href="https://www.linkedin.com/in/jonathankohjunjuet/"><i class="fab fa-linkedin-in"></i></a></li>
                 <li><a href="https://github.com/JonKohJJ"><i class="fab fa-github"></i></a></li>
             </ul>
-            <p>&#169 Jonathan Koh. All Rights Reserved</p>
+            <p>&#169 2021 Jonathan Koh. All Rights Reserved</p>
         </div>
     </div>
 
